--- a/simulations/attacks.ini
+++ b/simulations/attacks.ini
@@ -33,7 +33,7 @@ network = Scenario
 **.numTiers = 2
 **.dht.numReplica = 4
 
-**.host*.tier2.p2psipApp.identifier = "id"
+**.host*.tier2.p2psipApp.identifier = randomIdentifier(8)
 
 **.tier3.debugOutput = true
 
